# ic-hs

./: .gitattributes  .gitignore  .mergify.yml  BUILD.bazel  CODEOWNERS  Cargo.toml  IC-CBOR-Parser.html  IC-CBOR-Patterns.html  IC-CBOR-Utils.html  IC-Canister-Imp.html  IC-Canister-Snapshot.html  IC-Canister-StableMemory.html  IC-Canister.html  IC-Certificate-CBOR.html  IC-Certificate-Validate.html  IC-Certificate-Value.html  IC-Certificate.html  IC-Constants.html  IC-Crypto-BLS.html  IC-Crypto-Bitcoin.html  IC-Crypto-CanisterSig.html  IC-Crypto-DER-Decode.html  IC-Crypto-DER.html  IC-Crypto-DER_BLS.html  IC-Crypto-ECDSA.html  IC-Crypto-Ed25519.html  IC-Crypto-Secp256k1.html  IC-Crypto-WebAuthn.html  IC-Crypto.html  IC-DRun-Parse.html  IC-Debug-JSON.html  IC-HTTP-CBOR.html  IC-HTTP-GenR-Parse.html  IC-HTTP-GenR.html  IC-HTTP-Request.html  IC-HTTP-RequestId.html  IC-HTTP-Status.html  IC-HTTP.html  IC-Hash.html  IC-HashTree-CBOR.html  (+84 more)
.github/workflows/: docs.yml  release.yml  test.yml
cbits/: core.h  ecdh_BLS12381.h  hash.c  hmac.c  rand.c  randapi.c  share.c
httpbin-rs/: Cargo.toml
httpbin-rs/src/: main.rs
nix/: default.nix  generate.nix  gitSource.nix  haskell-packages.nix  sources.json  wasmtime.nix
nix/lts-12.26/: configuration-packages.nix  default.nix  name  packages.nix  set.nix
nix/secp256k1/: default.nix
proofs/: .gitignore  Makefile  edits
proofs/module-edits/IC/Canister/: midamble.v
proofs/theories/: .gitignore  _CoqProject
proofs/theories/IC/: Ref.v
rs/: Cargo.toml  shell.nix
rs/canister_sandbox/: Cargo.toml  build.rs
rs/canister_sandbox/embedders/embedders/: Cargo.toml
rs/canister_sandbox/ic_canister_sandbox_backend_lib/: Cargo.toml
rs/canister_sandbox/ic_canister_sandbox_backend_lib/src/: sandbox_manager.rs
rs/canister_sandbox/src/: backtrace.c
rs/canister_sandbox/system_api/src/: lib.rs
rs/canonical_state/: Cargo.toml
rs/canonical_state/src/encoding/: old_types.rs  types.rs
rs/embedders/src/wasmtime_embedder/: system_api.rs
rs/ic_canister_sandbox_common/src/: transport.rs
rs/interfaces/: Cargo.toml
rs/interfaces/src/: execution_environment.rs
rs/runtime/: Cargo.toml
rs/runtime/interfaces/src/: execution_environment.rs
rs/runtime/src/: controller_service_impl.rs  lib.rs  process_exe_and_args.rs  sandboxed_execution_controller.rs
rs/runtime/system_api/src/: sandbox_safe_system_state.rs
rs/sandbox_launcher/: Cargo.toml  build.rs
rs/sandbox_launcher/ic_canister_sandbox_common/: Cargo.toml
rs/sandbox_launcher/ic_canister_sandbox_common/src/: transport.rs
rs/sandbox_launcher/system_api/src/: system_api_empty.rs
rs/system_api/: Cargo.toml
rs/system_api/src/: lib.rs  request_in_prep.rs  sandbox_safe_system_state.rs
rs/types/: Cargo.toml
rs/types/src/: messages.rs
rs/types/src/messages/: inter_canister.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  process_exe_and_args.rs  sandboxed_execution_controller.rs
runtime/system_api/src/: sandbox_safe_system_state.rs
src/: IC.CBOR.Parser.html  IC.CBOR.Patterns.html  IC.CBOR.Utils.html  IC.Canister.Imp.html  IC.Canister.Snapshot.html  IC.Canister.StableMemory.html  IC.Canister.html  IC.Certificate.CBOR.html  IC.Certificate.Validate.html  IC.Certificate.Value.html  IC.Certificate.html  IC.Constants.html  IC.Crypto.BLS.html  IC.Crypto.Bitcoin.html  IC.Crypto.CanisterSig.html  IC.Crypto.DER.Decode.html  IC.Crypto.DER.html  IC.Crypto.DER_BLS.html  IC.Crypto.ECDSA.html  IC.Crypto.Ed25519.html  IC.Crypto.Secp256k1.html  IC.Crypto.WebAuthn.html  IC.Crypto.html  IC.DRun.Parse.html  IC.Debug.JSON.html  IC.HTTP.CBOR.html  IC.HTTP.GenR.Parse.html  IC.HTTP.GenR.html  IC.HTTP.Request.html  IC.HTTP.RequestId.html  IC.HTTP.Status.html  IC.HTTP.html  IC.Hash.html  IC.HashTree.CBOR.html  IC.HashTree.html  IC.Id.Forms.html  IC.Id.Fresh.html  IC.Management.html  IC.Purify.html  IC.Ref.HTTP.html  (+38 more)
src/IC/: .Ref.hs.swp  Bitcoin.hs  Canister.hs  Certificate.hs  Constants.hs  Crypto.hs  HTTP.hs  Management.hs  Purify.hs  Ref.hs  Runtime.hs  Serialise.hs  StateFile.hs  Types.hs  Utils.hs  Version.hs
src/IC/CBOR/: Utils.hs
src/IC/Canister/: Imp.hs  Snapshot.hs  StableMemory.hs
src/IC/Certificate/: Value.hs
src/IC/Crypto/: BLS.hsc  Bitcoin.hs  Ed25519.hs  Secp256k1.hs  WebAuthn.hs
src/IC/DRun/: Parse.hs
src/IC/Debug/: JSON.hs
src/IC/HTTP/: CBOR.hs  GenR.hs  IO.hs  Request.hs  RequestId.hs
src/IC/HTTP/GenR/: Parse.hs
src/IC/Id/: Forms.hs  Fresh.hs
src/IC/Ref/: HTTP.hs  IO.hs  Management.hs  Types.hs
src/IC/Test/: Agent.hs  DelayedIO.hs  Options.hs  Spec.hs  StableMemory.hs  Universal.hs  WebAuthn.hs
src/IC/Test/Agent/: Calls.hs  SafeCalls.hs  UnsafeCalls.hs  UserCalls.hs
src/IC/Test/Spec/: CanisterHistory.hs  CanisterVersion.hs  HTTP.hs  TECDSA.hs  Timer.hs  Utils.hs
src/IC/Wasm/: Imports.hs  Wasmtime.hs  Winter.hs
src/IC/Wasm/Wasmtime/: Persist.hs
src/IC/Wasm/Winter/: Persist.hs
test-data/: universal-canister.wasm  universal_canister.wasm
tests/: unit-tests.hs
universal-canister/: BUILD.bazel  Cargo.toml  canisters.bzl
universal-canister/src/: api.rs  lib.rs  main.rs
wabt-tests/: gen.py
