cabal-version:       2.2
name:                ic-hs
version:             0.0.1
author:              DFINITY
license:             LicenseRef-IC-1.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  cbits/*.h ic.did

common ghc-flags
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing

library
  import: ghc-flags

  include-dirs: cbits
  c-sources: cbits/aes.c
  c-sources: cbits/rom_curve_BLS12381.c
  c-sources: cbits/rom_field_BLS12381.c
  c-sources: cbits/big_384_58.c
  c-sources: cbits/bls_BLS12381.c
  c-sources: cbits/ecp2_BLS12381.c
  c-sources: cbits/ecp_BLS12381.c
  c-sources: cbits/fp12_BLS12381.c
  c-sources: cbits/fp2_BLS12381.c
  c-sources: cbits/fp4_BLS12381.c
  c-sources: cbits/fp_BLS12381.c
  c-sources: cbits/gcm.c
  c-sources: cbits/hash.c
  c-sources: cbits/hmac.c
  c-sources: cbits/newhope.c
  c-sources: cbits/oct.c
  c-sources: cbits/pair_BLS12381.c
  c-sources: cbits/randapi.c
  c-sources: cbits/rand.c
  c-sources: cbits/share.c

  hs-source-dirs: src
  exposed-modules: IC.Canister
  exposed-modules: IC.Canister.Imp
  exposed-modules: IC.Canister.Snapshot
  exposed-modules: IC.Canister.StableMemory
  exposed-modules: IC.CBOR.Parser
  exposed-modules: IC.CBOR.Patterns
  exposed-modules: IC.CBOR.Utils
  exposed-modules: IC.Certificate
  exposed-modules: IC.Certificate.CBOR
  exposed-modules: IC.Certificate.Validate
  exposed-modules: IC.Certificate.Value
  exposed-modules: IC.Constants
  exposed-modules: IC.Crypto
  exposed-modules: IC.Crypto.Bitcoin
  exposed-modules: IC.Crypto.BLS
  exposed-modules: IC.Crypto.CanisterSig
  exposed-modules: IC.Crypto.DER
  exposed-modules: IC.Crypto.DER_BLS
  exposed-modules: IC.Crypto.DER.Decode
  exposed-modules: IC.Crypto.ECDSA
  exposed-modules: IC.Crypto.Ed25519
  exposed-modules: IC.Crypto.Secp256k1
  exposed-modules: IC.Crypto.WebAuthn
  exposed-modules: IC.Debug.JSON
  exposed-modules: IC.DRun.Parse
  exposed-modules: IC.Hash
  exposed-modules: IC.HashTree
  exposed-modules: IC.HashTree.CBOR
  exposed-modules: IC.HTTP
  exposed-modules: IC.HTTP.CBOR
  exposed-modules: IC.HTTP.GenR
  exposed-modules: IC.HTTP.GenR.Parse
  exposed-modules: IC.HTTP.Request
  exposed-modules: IC.HTTP.RequestId
  exposed-modules: IC.HTTP.Status
  exposed-modules: IC.Id.Forms
  exposed-modules: IC.Id.Fresh
  exposed-modules: IC.Management
  exposed-modules: IC.Purify
  exposed-modules: IC.Ref
  exposed-modules: IC.Ref.IO
  exposed-modules: IC.Ref.HTTP
  exposed-modules: IC.Ref.Management
  exposed-modules: IC.Ref.Types
  exposed-modules: IC.Serialise
  exposed-modules: IC.StateFile
  exposed-modules: IC.Test.Agent
  exposed-modules: IC.Test.Agent.Calls
  exposed-modules: IC.Test.Agent.UnsafeCalls
  exposed-modules: IC.Test.Agent.SafeCalls
  exposed-modules: IC.Test.Agent.UserCalls
  exposed-modules: IC.Test.BLS
  exposed-modules: IC.Test.ECDSA
  exposed-modules: IC.Test.HashTree
  exposed-modules: IC.Test.Options
  exposed-modules: IC.Test.Secp256k1
  exposed-modules: IC.Test.Spec
  exposed-modules: IC.Test.Spec.HTTP
  exposed-modules: IC.Test.Spec.Timer
  exposed-modules: IC.Test.Spec.CanisterVersion
  exposed-modules: IC.Test.Spec.TECDSA
  exposed-modules: IC.Test.Spec.Utils
  exposed-modules: IC.Test.StableMemory
  exposed-modules: IC.Test.Universal
  exposed-modules: IC.Test.WebAuthn
  exposed-modules: IC.Types
  exposed-modules: IC.Utils
  exposed-modules: IC.Version
  exposed-modules: IC.Wasm.Imports
  exposed-modules: IC.Wasm.Winter
  exposed-modules: IC.Wasm.Winter.Persist
  exposed-modules: SourceId

  build-depends: MonadRandom
  build-depends: aeson >=1.4.7
  build-depends: asn1-encoding
  build-depends: asn1-types
  build-depends: async
  build-depends: atomic-write
  build-depends: base >= 4 && < 5
  build-depends: base >=4.12 && <5
  build-depends: base32
  build-depends: base64-bytestring >= 1.1
  build-depends: binary
  build-depends: bytestring
  build-depends: candid
  build-depends: case-insensitive
  build-depends: cborg
  build-depends: cereal
  build-depends: connection >= 0.3.1
  build-depends: containers
  build-depends: crc
  build-depends: cryptonite
  build-depends: data-default-class
  build-depends: directory
  build-depends: ed25519
  build-depends: either
  build-depends: filepath
  build-depends: hashable
  build-depends: haskoin-core
  build-depends: hex-text
  build-depends: http-client >= 0.7.11
  build-depends: http-client-tls
  build-depends: http-types
  build-depends: leb128-cereal
  build-depends: memory
  build-depends: mtl
  build-depends: network-uri
  build-depends: optparse-applicative
  build-depends: parallel
  build-depends: prettyprinter
  build-depends: primitive
  build-depends: process
  build-depends: quickcheck-io
  build-depends: random
  build-depends: random >= 1.2
  build-depends: row-types
  build-depends: serialise
  build-depends: split
  build-depends: splitmix
  build-depends: tasty
  build-depends: tasty >= 0.7
  build-depends: tasty-ant-xml
  build-depends: tasty-html
  build-depends: tasty-hunit
  build-depends: tasty-quickcheck
  build-depends: tasty-rerun
  build-depends: template-haskell
  build-depends: temporary
  build-depends: text
  build-depends: time
  build-depends: tls
  build-depends: transformers
  build-depends: uglymemo
  build-depends: unordered-containers
  build-depends: utf8-string
  build-depends: vector
  build-depends: wai
  build-depends: wai-cors
  build-depends: wai-extra
  build-depends: warp
  -- build-depends: wasmtime
  build-depends: wide-word
  build-depends: winter
  build-depends: word8
  build-depends: x509
  build-depends: x509-store
  build-depends: x509-validation
  build-depends: zlib

  extra-libraries: wasmtime

executable ic-ref
  import: ghc-flags
  ghc-options: -rtsopts

  hs-source-dirs: bin
  main-is: ic-ref.hs

  build-depends: base >=4.12 && <5
  build-depends: bytestring
  build-depends: ic-hs
  build-depends: optparse-applicative
  build-depends: text
  build-depends: wai-cors
  build-depends: wai-extra
  build-depends: warp
  build-depends: x509-store

executable segfault
  import: ghc-flags
  ghc-options: -rtsopts

  hs-source-dirs: bin
  main-is: segfault.hs

  build-depends: base >=4.12 && <5

  extra-libraries: wasmtime


executable ic-ref-run
  import: ghc-flags
  ghc-options: -rtsopts

  hs-source-dirs: bin
  main-is: ic-ref-run.hs

  build-depends: MonadRandom
  build-depends: async
  build-depends: base >=4.12 && <5
  build-depends: bytestring
  build-depends: candid
  build-depends: containers
  build-depends: ic-hs
  build-depends: mtl
  build-depends: optparse-applicative
  build-depends: prettyprinter
  build-depends: row-types
  build-depends: text
  build-depends: time
  build-depends: transformers

executable ic-ref-test
  import: ghc-flags
  ghc-options: -rtsopts

  hs-source-dirs: bin
  main-is: ic-ref-test.hs

  build-depends: base >=4.12 && <5
  build-depends: ic-hs
  build-depends: tasty
  build-depends: tasty-ant-xml
  build-depends: tasty-html
  build-depends: tasty-rerun

executable ic-request-id
  import: ghc-flags
  ghc-options: -rtsopts

  hs-source-dirs: bin
  main-is: ic-request-id.hs

  build-depends: base >=4.12 && <5
  build-depends: bytestring
  build-depends: hex-text
  build-depends: ic-hs
  build-depends: optparse-applicative
  build-depends: text
  build-depends: unordered-containers

test-suite unit-test
  import: ghc-flags
  type: exitcode-stdio-1.0

  hs-source-dirs: tests
  main-is: unit-tests.hs

  build-depends: base >=4.12 && <5
  build-depends: containers
  build-depends: directory
  build-depends: ic-hs
  build-depends: tasty >= 0.7
  build-depends: tasty-hunit
  build-depends: temporary
