[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-canister-sandbox-common = { git = "https://github.com/dfinity/ic" }
ic-canister-sandbox-backend-lib = { git = "https://github.com/dfinity/ic" }
ic-cycles-account-manager = { git = "https://github.com/dfinity/ic" }
ic-embedders = { git = "https://github.com/dfinity/ic" }
ic-interfaces = { git = "https://github.com/dfinity/ic" }
ic-config = { git = "https://github.com/dfinity/ic" }
ic-replicated-state = { git = "https://github.com/dfinity/ic" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic" }
ic-system-api = { git = "https://github.com/dfinity/ic" }
ic-base-types = { git = "https://github.com/dfinity/ic" }
ic-types = { git = "https://github.com/dfinity/ic" }
ic-wasm-types = { git = "https://github.com/dfinity/ic" }
hs-bindgen = { version = "0.8.0", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.54"
libc = "0.2.119"
once_cell = "1.8"
regex = "1.5.4"
which = "4.2.2"
wat = "1.0.52"

[lib]
crate-type = ["staticlib"]
