package(default_visibility = ["//visibility:public"])

load("//universal-canister:canisters.bzl", "rust_canister")

DEPENDENCIES = [
    "@crate_index//:candid",
    "@crate_index//:serde",
    "@crate_index//:wee_alloc",
    "@crate_index//:lazy_static",
]

load("@rules_rust//rust:defs.bzl", "rust_library") 

rust_library(
    name = "lib",
    srcs = [
        "src/lib.rs",
    ],
    aliases = {},
    crate_name = "universal_canister",
    edition = "2021",
    deps = DEPENDENCIES,
)

rust_canister(
    name = "universal-canister",
    srcs = [
        "src/main.rs",
        "src/api.rs",
        "src/lib.rs",
    ],
    aliases = {},
    version = "0.1.0",
    edition = "2021",
    deps = DEPENDENCIES + ["//universal-canister:lib"],
)
