[package]
name = "canister_sandbox"
version = "0.8.0"
edition = "2021"

[build-dependencies]
cc = "1.0"

[dependencies]
ic-canister-sandbox-backend-lib = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
libc = "0.2.119"

[features]
sigsegv_handler_checksum = [ "ic-canister-sandbox-backend-lib/sigsegv_handler_checksum" ]

[patch."https://github.com/dfinity/ic"]
ic-canister-sandbox-common = { git = "https://github.com/dfinity/ic-hs.git", branch = "mraszyk/runtime-poc-v0-bas-fixes" }
ic-canister-sandbox-backend-lib = { git = "https://github.com/dfinity/ic-hs.git", branch = "mraszyk/runtime-poc-v0-bas-fixes" }
ic-interfaces = { git = "https://github.com/dfinity/ic-hs.git", branch = "mraszyk/runtime-poc-v0-bas-fixes" }
ic-embedders = { git = "https://github.com/dfinity/ic-hs.git", branch = "mraszyk/runtime-poc-v0-bas-fixes" }
ic-system-api = { git = "https://github.com/dfinity/ic-hs.git", branch = "mraszyk/runtime-poc-v0-bas-fixes" }
