[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-canister-sandbox-common = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-canister-sandbox-backend-lib = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-cycles-account-manager = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-embedders = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-interfaces = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-config = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-replicated-state = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-system-api = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-wasm-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
hs-bindgen = { version = "0.8.0", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.54"
libc = "0.2.119"
once_cell = "1.8"
regex = "1.5.4"
which = "4.2.2"
wat = "1.0.52"
serde = { version = "1.0.99", features = ["derive"] }
serde_cbor = "0.11.1"
base64 = "0.21.0"
serde_with = "1.10.0"
serde_bytes="0.11.9"
hex="0.4.3"
openssl-sys = "0.9"
openssl = "0.10"

[lib]
crate-type = ["staticlib"]

[patch."https://github.com/dfinity/ic"]
ic-canister-sandbox-common = { path = "./ic_canister_sandbox_common" }
ic-canister-sandbox-backend-lib = { path = "./ic_canister_sandbox_backend_lib" }
ic-system-api = { path = "./system_api" }
