[package]
name = "ic-types"
version = "0.8.0"
edition = "2021"

[dependencies]
base32 = "0.4.0"
base64 = "0.11.0"
bincode = "1.2.1"
candid = "0.8.1"
derive_more = { git = "https://github.com/dfinity-lab/derive_more", branch = "master" }
hex = "0.4.2"
http = "0.2.5"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-btc-types-internal = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-constants = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-crypto-internal-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-crypto-sha = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-crypto-tree-hash = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-error-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-protobuf = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-utils = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
maplit = "1.0.2"
num-traits = "0.2.12"
once_cell = "1.8"
phantom_newtype = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
prost = "0.11.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11.1"
serde_json = "1.0.40"
serde_with = "1.6.2"
strum = "0.23.0"
strum_macros = "0.23.0"
thiserror = "1.0"
thousands = "0.2.0"
url = { version = "2", features = ["serde"] }
chrono = "0.4"
