[package]
name = "ic-canister-sandbox-common"
version = "0.8.0"
edition = "2021"

[lib]
name = "ic_canister_sandbox_common"
path = "src/lib.rs"

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
serde_bytes = "0.11"
ic-interfaces = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-embedders = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-replicated-state = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-system-api = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-types = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-utils = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
ic-sys = { git = "https://github.com/dfinity/ic", rev = "dca3091bc0a1a7f175c57464068c86ba19a556e6" }
serde = { version = "1.0.99", features = ["derive"] }
nix = "0.23.0"
libc = "0.2.119"
